--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -5,12 +5,19 @@ body {
     text-align: center;
 }
 
+#title {
+    text-align: center;
+    font-weight: 900;
+}
+
 .question {
     font-weight: 600;
+    text-align: center;
 }
 
 .answers {
     margin-bottom: 20px;
+    text-align: left;
 }
 
 .answers label {
@@ -34,10 +41,11 @@ body {
 }
 
 nav {
-    margin-top: 30%;
+    margin-top: 20px;
     background-color: coral;
     font-weight: 700;
     color: black;
+    text-align: center;
 }
 
 ul {
@@ -52,10 +60,8 @@ a {
 
 /* Color of the text changes when user visits link */
 a:visited {
-    color: gray;
-    text-emphasis: none;
-    text-decoration: none;
-    font-weight: lighter;
+    color: rgb(255, 0, 0);
+    font-weight: 900;
 }
 
 #banner {
